0.9009 2021-06-28
  - SPVM drop support solaris because I can't fix make error by myself
    http://www.cpantesters.org/cpan/report/6b54513a-c10b-11eb-bc66-57723b537541
  - SPVM support only 64bit System
  - SPVM support only Windows 10+
0.9008 2021-06-25
  - Change The all internal subroutine word is changed to method
  - Change The all word of Subroutine is changed to Method
  - rename Native API call_sub to call_spvm_method
  - rename Native PAI call_sub_by_name to call_spvm_method_by_name
  - rename Native API get_sub_id to get_method_id
  - rename Native API get_sub_id_by_object to get_method_id_by_object
  - rename Native API call_poly_sub_by_name to call_callback_method_by_name
0.9007 2021-06-17
  - fix Mac OS warnings "ld: warning: directory not found for option" in precompile
0.9006 2021-06-11
  - fix array init {} bugs that {foo => SPVM::Int->new(5)} was segfault
0.9005 2021-05-27
  - add SPVM::Regex "." regular expression character.
  - add SPVM::Regex single line mode option "s"
  - add SPVM::Regex ascii mode and don't support \d, \D, \w, \W, \s, \S without ascii mode option
  - Fix SPVM::Math->pi and SPVM::Math->e tests. Values is compared as numbers instead of strings
0.9004 2021-05-26
  - remove escape charcter \b of string literal
  - add raw escape character of string literal
    \p
    \P
    \X
    \g
    \k
    \K
    \v
    \V
    \h
    \H
    \R
    \b
    \B
    \A
    \Z
    \z
    \G
    \N
    \1, \2, \3, \4, \5, \6, \7, \8, \9

0.9003 2021-05-21
  - add SPVM::StringUtil->hex method
  - rename SPVM::Regex->caps method to SPVM::Regex->captures
0.9002 2021-05-20
  - add SPVM::StringUtil->trim_ascii_space method
  - fix memory blocks count internal bugs
  - fix Windows unexpected native api memory bug about get_field_object. I don't know the reason, but it was maybe type problem.
0.9001 2021-05-11
  - remove SPVM::Time->strptime because this method is too complex as version 1.0 core module.